--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Photos</string>
     <string name="photos">Photos</string>
+    <string name="set_wallpaper">Set as Wallpaper</string>
 </resources>
