--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="set_wallpaper">Set as Wallpaper</string>
     <string name="city">City</string>
     <string name="country">Country</string>
+    <string name="download">Download</string>
 </resources>
