--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,12 @@
     <string name="city">City</string>
     <string name="country">Country</string>
     <string name="download">Download</string>
-    <string name="location">Location</string>
-    <string name="width">Width</string>
-    <string name="height">Height</string>
+    <string name="location">Location:</string>
+    <string name="width">Width:</string>
+    <string name="height">Height:</string>
+    <string name="views">Views:</string>
+    <string name="instagram">Instagram:</string>
+    <string name="downloads">Downloads:</string>
+    <string name="likes">Likes:</string>
+    <string name="set_as_wallpaper">Set as Wallpaper</string>
 </resources>
