change:  - buttons on screen with single photo (Bottom Sheet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="downloads">Downloads:</string>
     <string name="likes">Likes:</string>
     <string name="set_as_wallpaper">Set as Wallpaper</string>
+    <string name="set_as">Set as</string>
 </resources>
