--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="likes">Likes:</string>
     <string name="set_as_wallpaper">Set as Wallpaper</string>
     <string name="set_as">Set as</string>
+    <string name="search">Search</string>
 </resources>
